logger configuration is updated

--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,10 @@
             /WEB-INF/spring-servlet.xml
         </param-value>
     </context-param>
+    <context-param>
+        <param-name>log4jConfiguration</param-name>
+        <param-value>/WEB-INF/classes/log4j2.xml</param-value>
+    </context-param>
 
     <filter>
 		<filter-name>HealthFilter</filter-name>
