--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,24 @@
 variables:
-     VERSION: "2.1.0"
-     BUILD_SCRIPTS_ROOT_PATH: "/home/gitlab-runner/ci_cd/k8s"
+  APP_VERSION: "2.1.0"
 workflow:
   rules:
-    - if: $CI_COMMIT_BRANCH == "development" || $CI_COMMIT_BRANCH == "test" || $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "migration"
+    - if: $CI_COMMIT_BRANCH == "test" || $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development" || $CI_COMMIT_BRANCH == "migration"
 stages:
   - build
   - deploy
 
-checkout_configs:
+build_docker:
   stage: build
   script:
-    - bash "$BUILD_SCRIPTS_ROOT_PATH/checkout_configs.sh"
+    - bash "deployment/steps/build_container.sh"
 
-build_container:
-  stage: build
-  script:
-    - bash "$BUILD_SCRIPTS_ROOT_PATH/metabolights-web/build_container.sh"
-
-deploy:
+deploy_editor:
   stage: deploy
+  rules:
+    - if: $CI_COMMIT_BRANCH == "test" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
+      when: on_success
+    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "migration"
+      when: manual
+      allow_failure: true
   script:
-    - bash "$BUILD_SCRIPTS_ROOT_PATH/metabolights-web/deploy.sh"
+    - bash "deployment/steps/deploy.sh"
