Fix single quote error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ deploy_metabolights_web:
   - mkdir -p $BUILD_PATH
   - cd $BUILD_PATH
   - APPS_ROOT_PATH="$BUILD_PATH/apps"
-  - K8S_CONFIG_FILE_PATH="$APPS_ROOT_PATH/$K8S_CONFIG_FILE_PATH'
+  - K8S_CONFIG_FILE_PATH="$APPS_ROOT_PATH/$K8S_CONFIG_FILE_PATH"
   - rm -rf $APPS_ROOT_PATH
   - echo git clone https://$CI_REGISTRY_USER:$CI_REGISTRY_PASSWORD@${APPS_PROJECT_URL}
   - git clone https://$CI_REGISTRY_USER:$CI_REGISTRY_PASSWORD@${APPS_PROJECT_URL}
